// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DisplayWrappers|NavBar/LinkWrapper Standard 1`] = `
<nav
  className="sc-bxivhb dGSKYG"
>
  <a
    aria-current="page"
    className="sc-htpNat gaSQtN sc-bxivhb dGSKYG active"
    href="/"
    onClick={[Function]}
    style={Object {}}
  >
    HOME
  </a>
  <a
    aria-current={null}
    className="sc-htpNat gaSQtN sc-bxivhb dGSKYG"
    href="/Causes"
    onClick={[Function]}
  >
    CAUSES
  </a>
  <a
    aria-current={null}
    className="sc-htpNat gaSQtN sc-bxivhb dGSKYG"
    href="/Posts"
    onClick={[Function]}
  >
    POSTS
  </a>
  <a
    aria-current={null}
    className="sc-htpNat gaSQtN sc-bxivhb dGSKYG"
    href="/Profile"
    onClick={[Function]}
  >
    PROFILE
  </a>
</nav>
`;

exports[`Storyshots DisplayWrappers|NavBar/LogoWrapper Standard 1`] = `
<div
  className="sc-ifAKCX fnZSTt"
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": true,
      "params": Object {},
      "path": "/",
      "url": "/",
    }
  }
  onClick={[Function]}
>
  <svg
    onClick={[Function]}
  >
    Logo.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBar Standard 1`] = `
<div
  className="sc-VigVT kcRElN"
>
  <div
    className="sc-EHOje kOcwsO"
  >
    <div
      className="sc-ifAKCX fnZSTt sc-EHOje kOcwsO"
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      match={
        Object {
          "isExact": true,
          "params": Object {},
          "path": "/",
          "url": "/",
        }
      }
    >
      <svg
        onClick={[Function]}
      >
        Logo.svg
      </svg>
    </div>
    <nav
      className="sc-bxivhb dGSKYG sc-EHOje kOcwsO"
    >
      <a
        aria-current="page"
        className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        HOME
      </a>
      <a
        aria-current={null}
        className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
        href="/Causes"
        onClick={[Function]}
      >
        CAUSES
      </a>
      <a
        aria-current={null}
        className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
        href="/Posts"
        onClick={[Function]}
      >
        POSTS
      </a>
      <a
        aria-current={null}
        className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
        href="/Profile"
        onClick={[Function]}
      >
        PROFILE
      </a>
    </nav>
  </div>
  <div
    className="sc-bwzfXH ilzmva"
  >
    <input
      className="sc-bdVaJa bGHooc"
      placeholder="Search"
      type="text"
    />
  </div>
  <div
    className="sc-gqjmRU cgcBHJ"
  >
    <div
      className="sc-gzVnrw bhQPgz"
    >
      <button
        className="sc-bZQynM bKeyVQ"
        onClick={[Function]}
      >
        SIGN UP
      </button>
      <button
        className="sc-bZQynM etdfXU"
        onClick={[Function]}
      >
        LOG IN
      </button>
    </div>
    <div
      className="sc-gZMcBi hhlJTS"
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      match={
        Object {
          "isExact": true,
          "params": Object {},
          "path": "/",
          "url": "/",
        }
      }
      onClick={[Function]}
    >
      <div
        className="sc-iwsKbI eFRUyw"
      >
        <svg>
          Userpic.svg
        </svg>
      </div>
      <div
        className="sc-dnqmqq dkzfjo"
      >
        <div
          className="sc-htoDjs haDExK"
          fontSize="16px"
          height="50%"
          width="80%"
        >
          James Wheeler
        </div>
        <div
          className="sc-htoDjs ZUubs"
          fontSize="12px"
          height="50%"
          width="80%"
        >
          larkin_tr***@yahoo.com
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre C 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search Causes"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre C&P 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search Causes and Posts"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre P 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search Posts"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre Standard 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarLeft Standard 1`] = `
<div
  className="sc-EHOje kOcwsO"
>
  <div
    className="sc-ifAKCX fnZSTt sc-EHOje kOcwsO"
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    location={
      Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      }
    }
    match={
      Object {
        "isExact": true,
        "params": Object {},
        "path": "/",
        "url": "/",
      }
    }
  >
    <svg
      onClick={[Function]}
    >
      Logo.svg
    </svg>
  </div>
  <nav
    className="sc-bxivhb dGSKYG sc-EHOje kOcwsO"
  >
    <a
      aria-current="page"
      className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO active"
      href="/"
      onClick={[Function]}
      style={Object {}}
    >
      HOME
    </a>
    <a
      aria-current={null}
      className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
      href="/Causes"
      onClick={[Function]}
    >
      CAUSES
    </a>
    <a
      aria-current={null}
      className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
      href="/Posts"
      onClick={[Function]}
    >
      POSTS
    </a>
    <a
      aria-current={null}
      className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
      href="/Profile"
      onClick={[Function]}
    >
      PROFILE
    </a>
  </nav>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarRight Standard 1`] = `
<div
  className="sc-gqjmRU cgcBHJ"
>
  <div
    className="sc-gzVnrw bhQPgz"
  >
    <button
      className="sc-bZQynM bKeyVQ"
      onClick={[Function]}
    >
      SIGN UP
    </button>
    <button
      className="sc-bZQynM etdfXU"
      onClick={[Function]}
    >
      LOG IN
    </button>
  </div>
  <div
    className="sc-gZMcBi hhlJTS"
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    location={
      Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      }
    }
    match={
      Object {
        "isExact": true,
        "params": Object {},
        "path": "/",
        "url": "/",
      }
    }
    onClick={[Function]}
  >
    <div
      className="sc-iwsKbI eFRUyw"
    >
      <svg>
        Userpic.svg
      </svg>
    </div>
    <div
      className="sc-dnqmqq dkzfjo"
    >
      <div
        className="sc-htoDjs haDExK"
        fontSize="16px"
        height="50%"
        width="80%"
      >
        James Wheeler
      </div>
      <div
        className="sc-htoDjs ZUubs"
        fontSize="12px"
        height="50%"
        width="80%"
      >
        larkin_tr***@yahoo.com
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileImageWrapper Standard 1`] = `
<div
  className="sc-iwsKbI eFRUyw"
>
  <svg>
    Userpic.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileInfoWrapper Standard 1`] = `
<div
  className="sc-dnqmqq dkzfjo"
>
  <div
    className="sc-htoDjs haDExK"
    fontSize="16px"
    height="50%"
    width="80%"
  >
    James Wheeler
  </div>
  <div
    className="sc-htoDjs ZUubs"
    fontSize="12px"
    height="50%"
    width="80%"
  >
    larkin_tr***@yahoo.com
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileWrapper Standard 1`] = `
<div
  className="sc-gZMcBi hhlJTS"
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": true,
      "params": Object {},
      "path": "/",
      "url": "/",
    }
  }
  onClick={[Function]}
>
  <div
    className="sc-iwsKbI eFRUyw"
  >
    <svg>
      Userpic.svg
    </svg>
  </div>
  <div
    className="sc-dnqmqq dkzfjo"
  >
    <div
      className="sc-htoDjs haDExK"
      fontSize="16px"
      height="50%"
      width="80%"
    >
      James Wheeler
    </div>
    <div
      className="sc-htoDjs ZUubs"
      fontSize="12px"
      height="50%"
      width="80%"
    >
      larkin_tr***@yahoo.com
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/SignUpInButtonWrapper Standard 1`] = `
<div
  className="sc-gzVnrw bhQPgz"
>
  <button
    className="sc-bZQynM bKeyVQ"
    onClick={[Function]}
  >
    SIGN UP
  </button>
  <button
    className="sc-bZQynM etdfXU"
    onClick={[Function]}
  >
    LOG IN
  </button>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjctCard/Images/ProfPicSubjectCard Standard 1`] = `
<div
  className="sc-VigVT jPryKi"
>
  <svg>
    Userpic.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/Images/ProfPicSubjectCard Standard 1`] = `
<div
  className="sc-VigVT jPryKi"
>
  <svg>
    Userpic.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/ProfPicSubjectCard Standard 1`] = `
<div
  className="sc-VigVT jPryKi"
>
  <svg>
    Userpic.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/SubjectCardTopLineWrapper Standard 1`] = `
<div
  className="sc-jzJRlG dGtcxo"
>
  <div
    className="sc-VigVT jPryKi"
  >
    <svg>
      Userpic.svg
    </svg>
  </div>
  <div
    className="sc-jTzLTM jLOmfJ"
    isTimeAgo={false}
  >
    
     
    James Montgommery Wheeler McGuiness
  </div>
  <div
    className="sc-jTzLTM jLOmfJ"
    isTimeAgo={true}
  >
    •
     
    1 Hour Ago
  </div>
  <svg
    className="sc-fjdhpX drGMxq"
  >
    Delete.svg
  </svg>
</div>
`;

exports[`Storyshots Primitive|/Buttons/SignUpInButton Login 1`] = `
<button
  className="sc-bZQynM etdfXU"
  onClick={[Function]}
>
  LOG IN
</button>
`;

exports[`Storyshots Primitive|/Buttons/SignUpInButton SignUp 1`] = `
<button
  className="sc-bZQynM bKeyVQ"
  onClick={[Function]}
>
  SIGN UP
</button>
`;

exports[`Storyshots Primitive|/Buttons/SignUpInButton Standard 1`] = `
<button
  className="sc-bZQynM etdfXU"
  onClick={[Function]}
/>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar ProfileEmail 1`] = `
<div
  className="sc-htoDjs dfBkuE"
  fontSize="12px"
  height="50%"
  width="100%"
>
  larkin_tr***@yahoo.com
</div>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar ProfileName 1`] = `
<div
  className="sc-htoDjs fkMuCz"
  fontSize="16px"
  height="50%"
  width="100%"
>
  James Wheeler
</div>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar Standard 1`] = `
<div
  className="sc-htoDjs fCdwiU"
>
  Standard
</div>
`;

exports[`Storyshots Primitive|Buttons/DeleteSubjectButton DeleteButton 1`] = `
<svg
  className="sc-fjdhpX drGMxq"
>
  Delete.svg
</svg>
`;

exports[`Storyshots Primitive|Images/ProfPicSubjectCard Standard 1`] = `
<div
  className="sc-jzJRlG jAUIYn"
>
  <svg>
    Userpic.svg
  </svg>
</div>
`;

exports[`Storyshots Primitive|Images/ProfileImage Standard 1`] = `
<img
  className="sc-jTzLTM ccMzdV"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar C 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search Causes"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar C&P 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search Causes and Posts"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar P 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search Posts"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar Standard 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search"
/>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Causes 1`] = `
<a
  aria-current={null}
  className="sc-htpNat gaSQtN"
  href="/causes"
  onClick={[Function]}
>
  CAUSES
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Home 1`] = `
<a
  aria-current="page"
  className="sc-htpNat gaSQtN active"
  href="/"
  onClick={[Function]}
  style={Object {}}
>
  HOME
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Posts 1`] = `
<a
  aria-current={null}
  className="sc-htpNat gaSQtN"
  href="/posts"
  onClick={[Function]}
>
  POSTS
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Profile 1`] = `
<a
  aria-current={null}
  className="sc-htpNat gaSQtN"
  href="/profile"
  onClick={[Function]}
>
  PROFILE
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Standard 1`] = `
<a
  aria-current="page"
  className="sc-htpNat gaSQtN active"
  href="/"
  onClick={[Function]}
  style={Object {}}
>
  TEST
</a>
`;

exports[`Storyshots Primitive|Text/NameTimeAgo Name 1`] = `
<div
  className="sc-fjdhpX fTqDOp"
  isTimeAgo={false}
>
  
   
  James Montgommery Wheeler McGuiness
</div>
`;

exports[`Storyshots Primitive|Text/NameTimeAgo Standard 1`] = `
<div
  className="sc-fjdhpX fTqDOp"
  isTimeAgo={false}
>
  
   
  Test
</div>
`;

exports[`Storyshots Primitive|Text/NameTimeAgo TimeAgo 1`] = `
<div
  className="sc-fjdhpX fTqDOp"
  isTimeAgo={true}
>
  •
   
  1 Hour Ago
</div>
`;

exports[`Storyshots SubjectCar|Images/ProfPicSubjectCard Standard 1`] = `
<div
  className="sc-VigVT jPryKi"
>
  <svg>
    Userpic.svg
  </svg>
</div>
`;

exports[`Storyshots SubjectCard|Images/ProfPicSubjectCard Standard 1`] = `
<div
  className="sc-VigVT jPryKi"
>
  <svg>
    Userpic.svg
  </svg>
</div>
`;
